[package]
name = "nexuslab_port_sniffer"
version = "0.1.0"
edition = "2021"
authors = ["NexusLab <asifiqbal7.iitkgp@gmail.com>"]
description = "A port sniffer written in Rust"
license = "MIT"
repository = ""
readme = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
