[package]
name = "nexuslab_port_sniffer"
version = "0.1.0"
edition = "2021"
authors = ["NexusLab <asifiqbal7.iitkgp@gmail.com>"]
description = "A port sniffer written in Rust"
license = "MIT"
repository = "https://github.com/nexus-lab-org/port-sniffer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
dns-lookup = "2.0.3"
ctrlc = "3.4.1"
log = "0.4.14"
env_logger = "0.9.0"
